# Cdm8-asm

./: .gitignore  AsmLexer.g4  AsmParser.g4  README.md  asm_commands.py  assembler.py  ast_builder.py  ast_nodes.py  code_segments.py  command_handlers.py  crc_test.asm  emulator.py  if_test.asm  infinite_loop_test.asm  intructions.py  linker.py  long_code_test.asm  macro_debug_test.asm  macro_processor.py  main.py  pyproject.toml  standard.mlb
.github/workflows/: release.yml
assembler/: AsmLexer.g4  AsmParser.g4  Macro.g4  asm_commands.py  assembler.py  ast_builder.py  ast_nodes.py  code_segments.py  command_handlers.py  linker.py  macro_processor.py  main.py  standard.mlb
cdm_asm/: AsmLexer.g4  AsmParser.g4  Macro.g4  asm_commands.py  assembler.py  ast_builder.py  ast_nodes.py  code_segments.py  command_handlers.py  error.py  linker.py  location.py  macro_processor.py  main.py  standard.mlb
cdm_emu/: emulator.py  server.py
demo/: main.asm  math16.asm
docs/: .gitignore  instruction-description.tex  main.tex
emulator/: emulator.py  server.py
examples/: addres_test.asm  cmp_test.asm  crc_test.asm  if_test.asm  long_code_test.asm  rsect_label_test.asm  standardmlb_test.asm  while_test.asm
logisim/: CdM-8-mark5-full.circ  CdM8-2ph.def  CdM8-ext.def  generate-decoder.py  instructions.txt  synthm.py  synthm.py.bak
tester/: main.py  runners.py  state.py
tests/: fib.py  hs.py  if.py  ldi.py  long_jump.py  memory.py
